--- a/Windows/Windows.csproj
+++ b/Windows/Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
@@ -15,10 +15,16 @@
     <Authors>Alex Messenger</Authors>
     <Company />
     <Description>User controls and useful .dll imports for windows desktop applications.</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Copyright>Alex Messenger (c) 2022</Copyright>
+    <PackageIcon>shirehorse128.png</PackageIcon>
+    <RepositoryUrl>https://github.com/MrAndMrsCat/Shirehorse/tree/master/Windows</RepositoryUrl>
+    <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <None Include="..\shirehorse128.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
