--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>Shirehorse.Core</AssemblyName>
     <RootNamespace>Shirehorse.Core</RootNamespace>
     <Title>Shirehorse.Core</Title>
-    <Version>0.1</Version>
+    <Version>0.2</Version>
     <Authors>Alex Messenger</Authors>
     <Company />
     <Description>Finite state machine template, misc class extensions and code snippets.</Description>
@@ -17,6 +17,7 @@
     <PackageIcon>shirehorse128.png</PackageIcon>
     <RepositoryUrl>https://github.com/MrAndMrsCat/Shirehorse/tree/master/Core</RepositoryUrl>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/MrAndMrsCat/Shirehorse</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
