-Added console drawing library

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>Shirehorse.Core</AssemblyName>
     <RootNamespace>Shirehorse.Core</RootNamespace>
     <Title>Shirehorse.Core</Title>
-    <Version>0.2.2</Version>
+    <Version>0.3.0</Version>
     <Authors>Alex Messenger</Authors>
     <Company />
     <Description>Finite state machine template, misc class extensions and code snippets.</Description>
@@ -22,6 +22,10 @@
 
   <ItemGroup>
     <None Include="..\shirehorse128.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Drawing\" />
   </ItemGroup>
 
 </Project>
